# src/internal/analysis/handler.go
@@ -20,9 +20,11 @@ func NewHandler(service Service) *Handler {
 // @Tags analysis
 // @Accept json
 // @Produce json
+// @Security BearerAuth
 // @Param request body AnalysisRequest true "Lista de transações"
 // @Success 200 {object} AnalysisResponse
 // @Failure 400 {object} map[string]string
+// @Failure 401 {object} map[string]string
 // @Router /analysis/transactions [post]
 func (h *Handler) AnalyzeTransactions(c *gin.Context) {
 	var req AnalysisRequest
